{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 94,
  "lineage": "4d324f47-a89d-f624-89f5-c2dc3453da26",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_port_2222",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2222"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-25T11:22:51.509-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-port-2222",
            "name": "allow-port-2222",
            "network": "https://www.googleapis.com/compute/v1/projects/docker-280917/global/networks/default",
            "priority": 1000,
            "project": "docker-280917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/docker-280917/global/firewalls/allow-port-2222",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-2222"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_port_80_and_443",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-25T11:22:51.636-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-port-80-443",
            "name": "allow-port-80-443",
            "network": "https://www.googleapis.com/compute/v1/projects/docker-280917/global/networks/default",
            "priority": 1000,
            "project": "docker-280917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/docker-280917/global/firewalls/allow-port-80-443",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-80-443"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gitlab_machine",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200611",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/docker-280917/zones/europe-west1-b/disks/gitlab-machine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "gitlab-machine",
            "instance_id": "7562525563082593682",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "argon:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQD5WyqZqE0O/9ZPD/4TzqjzVTxe+TFdpLnBFrIc0sqPc8G3w6Kp4fGsr3DZpz2OnyBvXN6qjzcpy1jIAkJPFXKdvgfvTIi9s4F/grfvUrg+3pRBZdsmpooIYTRBUMyR1Vqe8VXud8J/EM8qqHuOVIz/UV2apxgFid/NyKd/4fByceEVNcAalHNAn1fDcW090B2tw5E4aJPkVgWjgknUNYbaDoSWh979xfXRkLwQJSIPna4FYT2ZFeIfH1wcpFyBYo9HxyKlBjtbvMWGUFyjkeDn6uljhFfPAC7CKx4UeCmrGvjLdC4eQY/tFfBS0Tvm4HQc4XdCP1UFQ+vR8aJzZu0B9vzzpMoj39Kpt6bgfvEExGvHQZkk1RGwl30HecVjSgAJFtdVyjq4dDapDsUxgnSlx35heRdHm8C9hJglrFASfYG [...]
            },
            "metadata_fingerprint": "0gJVpv1u0_8=",
            "name": "gitlab-machine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.190.221.116",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/docker-280917/global/networks/default",
                "network_ip": "10.132.0.38",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/docker-280917/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "docker-280917"
              }
            ],
            "project": "docker-280917",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/docker-280917/zones/europe-west1-b/instances/gitlab-machine",
            "tags": [
              "allow-2222",
              "allow-80-443"
            ],
            "tags_fingerprint": "SJHiRi_yuP0=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}